<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/titleTW"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title"
            android:textColor="?android:textColorSecondary" />


        <RatingBar
            android:id="@+id/starsRB"
            style="@android:style/Widget.Holo.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTW"
            android:isIndicator="true"
            android:numStars="5" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/starsRB"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/amountTW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/amount"
            android:layout_below="@id/starsRB"
            android:padding="8dp"

            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountTW"
            android:layout_marginBottom="12dp"
            android:text="@string/price"
            android:padding="8dp" />

        <TextView
            android:id="@+id/priceTW"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountTW"
            android:layout_toRightOf="@id/amount"
            android:layout_marginBottom="12dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/shopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priceTW"
            android:layout_centerHorizontal="true"
            android:text="@string/cart" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>